# Coleccion-Ejercicios-Libreria-estandar-de-C

./: CMakeLists.txt  README.md  main.c
Funciones stdio/: abrir_archivo.c  abrir_archivo.h  escribir-leer_archivo.c  escribir-leer_archivo.h
Funciones stdlib/: absoluto.c  absoluto.h  random.c  random.h
Funciones string/: comparacion.c  comparacion.h  longitud.c  longitud.h
